--- a/codes/pom.xml
+++ b/codes/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.test.webmagic</groupId>
-    <artifactId>WebMagicDemo</artifactId>
+    <artifactId>webmagicdemo</artifactId>
     <version>1.0-SNAPSHOT</version>
 <dependencies>
     <dependency>
@@ -30,5 +30,10 @@
         </exclusions>
     </dependency>
 </dependencies>
+    <build>
+        <plugins>
 
+        </plugins>
+        <finalName>webmagicdemo</finalName>
+    </build>
 </project>
